chore: update managedservices api (#151)
