# pkg/api/managedservices/model_service_account.go
@@ -1,0 +1,22 @@
+/*
+ * Managed Service API
+ *
+ * Managed Service API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package managedservices
+
+// ServiceAccount Service Account created in MAS-SSO for the Kafka Cluster for authentication
+type ServiceAccount struct {
+	// server generated unique id of the service account
+	Id           string `json:"id,omitempty"`
+	Kind         string `json:"kind,omitempty"`
+	Href         string `json:"href,omitempty"`
+	Name         string `json:"name,omitempty"`
+	Description  string `json:"description,omitempty"`
+	ClientID     string `json:"clientID,omitempty"`
+	ClientSecret string `json:"clientSecret,omitempty"`
+}
