# pkg/api/managedservices/model_service_account_list_item_all_of.go
@@ -1,0 +1,19 @@
+/*
+ * Managed Service API
+ *
+ * Managed Service API
+ *
+ * API version: 0.0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package managedservices
+
+// ServiceAccountListItemAllOf struct for ServiceAccountListItemAllOf
+type ServiceAccountListItemAllOf struct {
+	// server generated unique id of the service account
+	Id          string      `json:"id,omitempty"`
+	ClientID    string      `json:"clientID,omitempty"`
+	Name        string      `json:"name,omitempty"`
+	Description interface{} `json:"description,omitempty"`
+}
